Carga de Filtros de Imagen

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -27,6 +27,6 @@
         android:layout_gravity="center"
         android:text=" @Royalcars.ve"
         android:textStyle="bold"
-        android:textColor="@color/colorAccent" />
+        android:textColor="@color/color_white" />
 
 </LinearLayout>
