--- a/app/src/main/res/layout/fragment_view_inv.xml
+++ b/app/src/main/res/layout/fragment_view_inv.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -596,7 +597,6 @@
 
                 </LinearLayout>
                 <LinearLayout
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="100"
@@ -613,7 +613,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="25"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_bookmark_border_black_24dp"
                         />
 
                     <ImageView
@@ -621,22 +620,21 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="25"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_person_add_black_24dp"
                         />
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="25"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_control_point_black_24dp"
                         />
+
                     <ImageView
+                        android:id="@+id/imagereturn"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="25"
+                        android:layout_height="40dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_apps_black_24dp"
-                        />
+                        android:layout_weight="25"
+                        android:src="@drawable/ic_back" />
                 </LinearLayout>
 
             </LinearLayout>
