--- a/app/src/main/res/layout-w900dp/row_model.xml
+++ b/app/src/main/res/layout-w900dp/row_model.xml
@@ -6,7 +6,8 @@
     android:layout_margin="5dp"
     card_view:cardCornerRadius="5dp"
     card_view:cardElevation="10dp"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:orientation="horizontal"
