--- a/app/src/main/res/layout/fragment_view_inv.xml
+++ b/app/src/main/res/layout/fragment_view_inv.xml
@@ -608,6 +608,31 @@
                     android:paddingRight="8dp"
                     android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/vehicleDesc"
+                        android:layout_width="396dp"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/padding"
+                        android:text=".."
+                        android:textColor="@color/color_black"
+                        android:textSize="@dimen/body_font_size"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/vehiclePrice" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="100"
+                    android:background="#FFFFFF"
+                    android:layout_marginTop="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
